<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.discount.adddiscount.CreateDiscountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/bg_header_account_fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:translationZ="@dimen/_2dp">


            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:src="@drawable/ic_baseline_keyboard_backspace_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_create_discount"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_70dp"
            android:paddingTop="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/margin_50dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/layout_name_discount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_12dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_title_name_discount"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_text_name_discount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:background="@drawable/bg_edit_text_large"
                        android:drawableStart="@drawable/ic_baseline_menu_book_24"
                        android:drawablePadding="@dimen/margin_12dp"
                        android:inputType="text"
                        android:padding="@dimen/margin_12dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_value_discount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_12dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/layout_name_discount">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_title_value_discount"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_text_value_discount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:background="@drawable/bg_edit_text_large"
                        android:drawableStart="@drawable/ic_baseline_attach_money_24"
                        android:drawablePadding="@dimen/margin_12dp"
                        android:inputType="number"
                        android:padding="@dimen/margin_12dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_code_discount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_12dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/layout_value_discount">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/margin_12dp"
                            android:text="@string/text_title_code_discount"
                            android:textSize="@dimen/text_size_16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/text_view_random_discount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_title_random_code_discount"
                            android:textColor="@color/main_900"
                            android:textSize="@dimen/text_size_16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/edit_text_code_discount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:background="@drawable/bg_edit_text_large"
                        android:drawableStart="@drawable/ic_baseline_qr_code_24"
                        android:drawablePadding="@dimen/margin_12dp"
                        android:inputType="textCapCharacters"
                        android:maxLength="15"
                        android:padding="@dimen/margin_12dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_amount_discount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_12dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/layout_code_discount">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_title_amount_discount"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_text_amount_discount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:background="@drawable/bg_edit_text_large"
                        android:drawableStart="@drawable/ic_baseline_numbers_24"
                        android:drawablePadding="@dimen/margin_12dp"
                        android:inputType="number"
                        android:padding="@dimen/margin_12dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_time_start_discount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_12dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/layout_amount_discount">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_title_time_start_discount"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_text_time_start_discount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:background="@drawable/bg_edit_text_large"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:drawableStart="@drawable/ic_baseline_access_time_24"
                        android:drawablePadding="@dimen/margin_12dp"
                        android:focusable="false"
                        android:inputType="none"
                        android:padding="@dimen/margin_12dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_time_end_discount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_12dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/layout_time_start_discount">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_title_time_end_discount"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_text_time_end_discount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:background="@drawable/bg_edit_text_large"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:drawableStart="@drawable/ic_baseline_access_time_24"
                        android:drawablePadding="@dimen/margin_12dp"
                        android:focusable="false"
                        android:inputType="none"
                        android:padding="@dimen/margin_12dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_book_discount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_12dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/layout_time_end_discount">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_title_book_discount"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_text_book_discount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:background="@drawable/bg_edit_text_large"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:drawableStart="@drawable/ic_baseline_menu_book_24"
                        android:drawablePadding="@dimen/margin_12dp"
                        android:focusable="false"
                        android:inputType="none"
                        android:padding="@dimen/margin_12dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_visible_discount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_12dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/layout_book_discount">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_title_type_discount"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/radio_group_text_visible_discount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8dp">

                        <RadioButton
                            android:id="@+id/radio_type_visible_discount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/text_type_visible_discount" />

                        <RadioButton
                            android:id="@+id/radio_type_invisible_discount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_type_invisible_discount" />
                    </RadioGroup>
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_8dp"
                    android:layout_marginTop="@dimen/margin_50dp"
                    android:layout_marginRight="@dimen/margin_8dp"
                    android:layout_marginBottom="@dimen/margin_50dp"
                    android:background="@drawable/bg_button_large_size"
                    android:text="Tạo mã giảm giá"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/layout_visible_discount"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
